<resources>
    <string name="app_name">Zadanie 2</string>
    <string name="action_quit">Quit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="FirstEditTextHint">a</string>
    <string name="XSquareText">X<sup><small> 2 </small></sup>+</string>
    <string name="SecondEditTextHint">b</string>
    <string name="XText">X +</string>
    <string name="ThirdEditTextHint">c</string>
    <string name="EqualsText">= 0</string>
    <string name="Calculate">Calculate</string>
    <string name="Result">Results will be shown here</string>
</resources>