<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeltaActivity">

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF5722"
        android:text="@string/Calculate"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Num2EditText" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:text="@string/Result"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
        app:layout_constraintVertical_bias="0.108" />

    <EditText
        android:id="@+id/Num2EditText"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="5"
        android:gravity="bottom|center|end"
        android:hint="@string/SecondEditTextHint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/X"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/XSquare"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Num3EditText"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="5"
        android:gravity="bottom|center|end"
        android:hint="@string/ThirdEditTextHint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/X"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/X"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/XText"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/Num3EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Num2EditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/XSquare"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/XSquareText"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/Num2EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Num1EditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Equals"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/EqualsText"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Num3EditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Num1EditText"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="5"
        android:gravity="bottom|center|end"
        android:hint="@string/FirstEditTextHint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/XSquare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>